[package]
name = "home_enviorment_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
structopt = { version = "0.3", default-features = false }

actix-web = "4.0.0-beta.10"
